[package]
authors = ["Marc Intha-amnouay <marc.inthaamnouay@gmail.com>"]
description = "a proc-macro which map a type to another"
edition = "2024"
keywords = ["proc-macro", "map", "type"]
license = "MIT"
name = "bricke"
version = "0.2.4"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
jiff = "0.2.25"
